--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title  Dashboard | SpArc
+        title  Dashboard
         include ./head.pug
     body
         
