--- a/views/menu.pug
+++ b/views/menu.pug
@@ -6,7 +6,7 @@ header
                     a.grey-text.text-darken-4.sidenav-trigger.hide-on-large-only(href="#", data-target="nav-mobile", onclick="sidenavinstance.open()")
                         i.material-icons.button-collapse menu
 
-                    a.brand-logo.black-text(href="/dashboard") Broomstick
+                    a.brand-logo.black-text(href="/dashboard") Indafa
                    
                     ul#nav-mobile.right.hide-on-med-and-down
                         li
